--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "advocate",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://https://annet-bon.github.io/advocate/",
+  "homepage": "https://annet-bon.github.io/advocate/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
